<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalculationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sum_with_tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/sum_with_tax"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sum_with_tax_edit_text"
                style="@style/Widget.Vat_Calculator.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sum_without_tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/sum_without_tax"
            app:layout_constraintTop_toBottomOf="@id/sum_with_tax">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sum_without_tax_edit_text"
                style="@style/Widget.Vat_Calculator.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/tax"
            app:layout_constraintTop_toBottomOf="@id/sum_without_tax">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tax_edit_text"
                style="@style/Widget.Vat_Calculator.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/buttons_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/buttons_comment"
            app:layout_constraintTop_toBottomOf="@+id/tax" />

        <Button
            android:id="@+id/calc_side"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:text="Button"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/cals_main"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttons_comment" />

        <Button
            android:id="@+id/cals_main"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/calc_side"
            app:layout_constraintTop_toBottomOf="@id/buttons_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>